<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/txtActualizaIngrediente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="333dp"
        android:layout_marginEnd="41dp"
        android:ems="10"
        android:hint="Ingrediente"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/txtActualizaCantidad"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="41dp" />

    <EditText
        android:id="@+id/txtActualizaCantidad"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:hint="@string/valhintCantidad"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtActualizaIngrediente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtActualizaIngrediente" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        android:text="@string/valbtnGrabar"
        app:layout_constraintEnd_toEndOf="@+id/txtActualizaIngrediente"
        app:layout_constraintTop_toBottomOf="@+id/txtActualizaIngrediente" />

    <Button
        android:id="@+id/btnAtrasRegIngredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="104dp"
        android:text="@string/valbtnAtras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />







</androidx.constraintlayout.widget.ConstraintLayout>